<resources>
    <string name="app_name">Kilifi Housing</string>
    <string name="no_of_incorrect_attempts">No. of attempts remaining</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="this_is_second_activity">This is Second Activity</string>
    <string name="new_user_register">New User? Register</string>
    <string name="register">Register</string>
    <string name="already_signed_in_login">Already signed in? Login</string>
    <string name="email">Email</string>
    <string name="logout">logout</string>
    <string name="settings">settings</string>
    <string name="refresh">refresh</string>
    <string name="signout">signOut</string>
</resources>
